responsive mobile changes

--- a/movieQuiz.html
+++ b/movieQuiz.html
@@ -1,5 +1,5 @@
 
-<html>
+<html lang="en">
     <head>
         <title>Magnificant Movie Quiz</title>
         <link rel="stylesheet" href="main.css">
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Bungee+Shade&display=swap" rel="stylesheet">
       </head>
         <body>
-            <h1> Magnificent Movie Quiz</h1>
+            <header id = "titleText"><h1> Magnificent Movie Quiz</h1></header>
             <section id="movieQuiz" class = "quizContainer">
                   
                     <p id = "introText" class = "introText">How well do you know some of the world's most popular movies? Test your knowledge of famous movie quotes!</p>
