--- a/movieQuiz.html
+++ b/movieQuiz.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Magnificant Movie Quiz</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:300i,400&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Bungee+Shade&display=swap" rel="stylesheet">
